Simplified compiler plugin config
- we don't need property if we specify the compiler plugin
- we don't need the group id for maven's own plugins
- the reflective opening is not needed either

Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>